Remove Contact Me Section and modify Readme

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio created using create-react-app"
+      content="Portfolio created using React"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/bag2.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>LDT Portfolio</title>
   </head>
